[gd_scene load_steps=17 format=4 uid="uid://dorx67iooagt0"]

[ext_resource type="Script" path="res://scripts/key_hang.gd" id="1_ulduj"]
[ext_resource type="PackedScene" uid="uid://c1o81vvnyk5lb" path="res://assets/chain_link.tscn" id="2_hj4tm"]
[ext_resource type="Script" path="res://scripts/card_part.gd" id="3_gmltj"]
[ext_resource type="Material" uid="uid://cyosiiiy0qf74" path="res://assets/materials/key_material/copper.tres" id="4_gielh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hdfu2"]
radius = 0.035
height = 0.135

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_72k34"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pa4bi"]
material = SubResource("StandardMaterial3D_72k34")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mdynn"]
height = 0.33
radius = 0.09

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yut8j"]

[sub_resource type="BoxMesh" id="BoxMesh_75j3m"]
material = SubResource("StandardMaterial3D_yut8j")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p7jo6"]
resource_name = "Copper"
albedo_color = Color(0.521083, 0.337149, 0.147017, 1)
metallic = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_1nkyk"]
_surfaces = [{
"aabb": AABB(-4.66733, -0.302755, -1.49694, 9.33466, 0.60551, 2.99388),
"attribute_data": PackedByteArray("W17ukXtVq4pbXquKe1X5mntVpJNlZPmaW16kk2Vk035bXvWIe1XukXtV9Yh7VdN+hVvQpmVk0KaFWxSue1Uet2Vkyq9lZB63hVvKr3tV+ZqFWxqlZWQUrmVkGqVlZPmaI2cetyNnNKiCaB63gmg0qGVkHrdlZPmaxGUet8Rl+ZrEZTybxGXokyNnPJsjZ+iTxGUYksRl+ZplZBiSZWT5msRlHKQjZxykxGXVimVk1YojZxykI2c+rsRlHKTEZT6uI2cet8RlHrfEZfWBZWT1gQFjHX0BY9N+o2EdfaNh035gZB19YGTTfgFjHX0BY9N+I2f9hCNn6JPEZf2ExGXokxc/NEm4PDJJCz+qg3c85oM4MxNJ1zAESfwx9oNoL9uDmDUeSaU0sYP4NydJUjfRg1g6LknnOeWD3iw1suksArHKKQWyIirlsI88AIWJPCKGij/BhKQ/M4Z3LvRI3SvgSMcsuIMhKmuD3VmgeExXoHiuW3F6rlsCfd1Z035MV9N+e1UCfXtVcXrZOUSOzTn1sHw8WI5VPA2xxyw+juksArFaLzyOmy8UsZY074uLNBKNOTfuiy03EY2rNBGxNzfesJg0P445Nz6O3Tnxi9A5FY0sN8CKiDTDilg3AYVSN9GDrDQAhaU0sYOlNCWGqjRyh1U3KYZZNzqHAjIDhfwx9oNrLwSFaC/bgws/qoN3POaDWi8nhmIvUof4MSmGAzJah/A5DIXnOeWDjDxchyw/jYe+LPmExyy4g5cpwIQhKmuDAzJah2IvUofkMcSKRi/Hiuw5LYasLCWGmSk1hvQ5U4e1LEOHHCp9h1k3OoeqNHKHLDfAiog0w4qYND+OOTc+jos874t+PBiNhz/Ii5k/OY33MT6OMDIPsbUsQ4esLMWKVS/0i0wvFY3zMfCL6TESjTQqfI4iKuWw5DHEikYvx4ocKn2HDCqbitI5xYoEP+2wHT+Pjow8XIf0OVOHejzOitI5xYp8PFiOHT+PjlovPI73MT6OsiwAjK0sJI3ZOUSOejzOirQpZ400KnyOxyw+jqwsxYqXKfWLDCqbihI/sIosP42HEj+wirQ5sLTLOQCyJzemtDs3ALI7MhayMDIPsaQvLLKbLxSxNzfesLI0AbKrNBGxWzwYslU8DbHNOfWwVz//sQQ/7bDtLzK2zy/ttFUtkbYhLSS1Gz90tUA85bT0KbW1OzLAtKI0qbSjYRR9o2GdeuRf035sXdN+rlsUfa5bnXpsXd545F/eeKY06LVMMuW1pznjtSg3AbZ6Psi2DDwqtpwqHrdtQjSUCkI4nQpAE5SkPz2dv0RglIZEM51aR5GUTEcvnY9KsZSQSiydxU2RlNNNL51gUGCUmVAznbFSM5QVUzedFFUTlHtVPJ0XQ7WLzUCTi1BF24u5R/+Lj0oTjGZN/4vOT9uLB1K1i1FUlItrQy+DKkEvg4pFL4PURy+Dj0ovg0tNL4OVTy+DtFEvg/VTMIMXQ6p6zkDLelFFg3q5R196kEpMemZNX3rPT4N6CFKqelFUy3puQityC0BMcr9E/nFaR81xj0quccVNzXFgUP5xsVIrchVVTHIKQihppD8jaYZELGlMRzBpj0oyadNNMGmZUCxpFVMnaXtVImmQQjFgMUABYNhEa2BnR6Zgj0rNYLdNpmBGUGpgjlIwYOxUAGCFQ+JXR0GUV55FLFjgR21Yj0qRWD5NbVh/TyxYmFHiV9ZTk1fURMNPqEJBT7RGZVCISOxQjkoeUZRM7FBoTmRQSVDDT3RSQU+HQ32u1kSctkhBzK6rQh63oEUzrrdG+7XhR/Kti0hztZBKzq2RSkC1P03xrZdMcrWBTzKua076tZlRfK5LUJy22FPLrndSHbeRQi6mMkBfptlE9aVoR7mlkEqSpbhNuaVHUPSlj1Itpu1UXqY="),
"format": 34896613399,
"index_count": 1320,
"index_data": PackedByteArray("AAABAAIAAwAEAAUABgAFAAQAAAAFAAYAAAACAAcABwACAAgAAAAHAAUAAQAAAAkABwAIAAoABwAKAAsADAANAA4ADwAQABEAEAAPABIAEgAPAA4AEwAMAA4AFAAMABMADwATAA4AFQAOAA0AFgAUABMAFwAWABMAGAAZABoAGgAZABsAHAAdAB4AHgAdAB8AIAAhACIAIgAhACMAJAAlACYAJgAlACcAKAAgACkAKQAgACIAKgAkACsAKwAkACYALAAtAC4ALgAtAC8ALQAwAC8ALwAwADEAMgAqADMAMwAqACsANAA1ADYANgA1ADcAOAA5ADoAOgA5ADsAPAA9AD4APgA9AD8AQABBAEIAQgBBAEMARABFAEYARgBFAEcASABEAEkASQBEAEYASgBIAEsASwBIAEkATABKAE0ATQBKAEsAQQBMAEMAQwBMAE0ATgBPAFAAUABPAFEAUgBTAFQAVABTAFUAVgBXAFgAWABXAFkAWgBbAFwAXABbAF0AXQBbAF4AXgBbAF8AXwBbAGAAYABbAGEARQBWAEcARwBWAFgAYgBjAGQAZABjAGUAZgBnAGgAaABnAGkAagBrAGwAbABrAG0AbgBvAHAAcABvAHEAbABtAHIAcgBtAHMAcQBvAGIAYgBvAGMAbAB0AGoAagB0AHUAdgB3AHgAeAB3AHkAegB7AHwAfAB7AH0AfgB/AIAAgAB/AIEAVACCAFIAUgCCAIMAhACFAIYAhgCFAIcAiACJAHYAdgCJAHcAUwCKAFUAVQCKAIsAjACNAI4AjgCNAI8AkACRAJIAkgCRAJMAiACUAFIAUgCUAFMAdgB8AIgAiAB8AJQAeAB6AHYAdgB6AHwAfgCGAHgAeACGAHoAgACEAH4AfgCEAIYAjACVAIAAgACVAIQAjgCWAIwAjACWAJUAlACXAFMAUwCXAIoAlQCYAIQAhACYAIUAUgCDAIgAiACDAIkAgACBAIwAjACBAI0AhgCHAHoAegCHAHsAlgCZAJUAlQCZAJgAeAB5AH4AfgB5AH8AfAB9AJQAlAB9AJcAmgCbAJwAnACbAJ0AawCeAG0AbQCeAJ8AoAChAKIAogChAKMApAClAHAAcAClAG4AmwCQAJ0AnQCQAJIAkQCmAJMAkwCmAKcAqACpAKoAqgCpAKsArACtAGYAZgCtAGcAqgCuAKgAqACuAK8ApgCwAKcApwCwALEAcgCyAGwAbACyAHQAZQCzAGQAZACzALQAtQC2ALcAtwC2ALgAaABpAKQApABpAKUAtgCaALgAuACaAJwAoQC5AKMAowC5ALoAagB1AKoAqgB1AK4AqQC7AKsAqwC7ALwAcgBzAKAAoABzAKEAvQC+AKgAqAC+AKkAcwC/AKEAoQC/ALkAoADAAHIAcgDAALIAqwC8AGsAawC8AJ4AwQDCAL4AvgDCAMMAvQDEAMUAxQDEAMYAvgDDAKkAqQDDALsAbQCfAHMAcwCfAL8AqgCrAGoAagCrAGsAqACvAL0AvQCvAMQAogDHAKAAoADHAMAAxQDBAL0AvQDBAL4AyAC1AMkAyQC1ALcAygDLAMwAzADLAM0AzgDPANAA0ADPANEAzQDSANMA0wDSANQA1QDWAMsAywDWANcA0ADRAE4ATgDRAE8A0wDUAM4AzgDUAM8AywDXAM0AzQDXANIA2ADZANUA1QDZANYA2gDbANwA3ADbAN0A3gDYAN8A3wDYANUA3QBOAOAA4ABOAFAA4QDOANsA2wDOANAAzADNAOIA4gDNANMA3wDVAMoAygDVAMsA2wDQAN0A3QDQAE4A4gDTAOEA4QDTAM4A4wDkAOUA5QDkAOYA5gDkAOcA5wDkAOgA6ADkAOkA6QDkAOoA6wDiAOwA7ADiAOEA7QDKAO4A7gDKAMwA7wDeAPAA8ADeAN8A3ADdAPEA8QDdAOAA7ADhANoA2gDhANsA7gDMAOsA6wDMAOIA8ADfAO0A7QDfAMoA8gDzAPQA9ADzAPUA9gD3APIA8gD3APMA+AD5APYA9gD5APcA+gD7APgA+AD7APkA/AD9APoA+gD9APsA/gD/APwA/AD/AP0AAAEBAf4A/gABAf8AAgEDAQABAAEDAQEBBAHyAAUBBQHyAPQABgH2AAQBBAH2APIABwH4AAYBBgH4APYACAH6AAcBBwH6APgACQH8AAgBCAH8APoACgH+AAkBCQH+APwACwEAAQoBCgEAAf4ADAECAQsBCwECAQABDQEEAQ4BDgEEAQUBDwEGAQ0BDQEGAQQBEAEHAQ8BDwEHAQYBEQEIARABEAEIAQcBEgEJAREBEQEJAQgBEwEKARIBEgEKAQkBFAELARMBEwELAQoBFQEMARQBFAEMAQsBFgENARcBFwENAQ4BGAEPARYBFgEPAQ0BGQEQARgBGAEQAQ8BGgERARkBGQERARABGwESARoBGgESAREBHAETARsBGwETARIBHQEUARwBHAEUARMBHgEVAR0BHQEVARQBHwEWASABIAEWARcBIQEYAR8BHwEYARYBIgEZASEBIQEZARgBIwEaASIBIgEaARkBJAEbASMBIwEbARoBJQEcASQBJAEcARsBJgEdASUBJQEdARwBJwEeASYBJgEeAR0BKAEfASkBKQEfASABKgEhASgBKAEhAR8BKwEiASoBKgEiASEBLAEjASsBKwEjASIBLQEkASwBLAEkASMBLgElAS0BLQElASQBLwEmAS4BLgEmASUBMAEnAS8BLwEnASYBMQEoATIBMgEoASkBMwEqATEBMQEqASgBNAErATMBMwErASoBNQEsATQBNAEsASsBNgEtATUBNQEtASwBNwEuATYBNgEuAS0BOAEvATcBNwEvAS4BOQEwATgBOAEwAS8BOgExATsBOwExATIBPAEzAToBOgEzATEBPQE0ATwBPAE0ATMBPgE1AT0BPQE1ATQBPwE2AT4BPgE2ATUBQAE3AT8BPwE3ATYBQQE4AUABQAE4ATcBQgE5AUEBQQE5ATgBQwE6AUQBRAE6ATsBRQE8AUMBQwE8AToBRgE9AUUBRQE9ATwBRwE+AUYBRgE+AT0BSAE/AUcBRwE/AT4BSQFAAUgBSAFAAT8BSgFBAUkBSQFBAUABSwFCAUoBSgFCAUEBTAFNAU4BTgFNAU8BUAFRAUwBTAFRAU0BUgFTAVABUAFTAVEBVAFVAVIBUgFVAVMBVgFXAVQBVAFXAVUBWAFZAVYBVgFZAVcBWgFbAVgBWAFbAVkBXAFdAVoBWgFdAVsBXgFMAV8BXwFMAU4BYAFQAV4BXgFQAUwBYQFSAWABYAFSAVABYgFUAWEBYQFUAVIBYwFWAWIBYgFWAVQBZAFYAWMBYwFYAVYBZQFaAWQBZAFaAVgBZgFcAWUBZQFcAVoB8wBeAfUA9QBeAV8B9wBgAfMA8wBgAV4B+QBhAfcA9wBhAWAB+wBiAfkA+QBiAWEB/QBjAfsA+wBjAWIB/wBkAf0A/QBkAWMBAQFlAf8A/wBlAWQBAwFmAQEBAQFmAWUB"),
"material": SubResource("StandardMaterial3D_p7jo6"),
"name": "Copper",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 359,
"vertex_data": PackedByteArray("TjHuk52nVNWZI+6T1NtU1Zkj7pOdp1TVXELuk9TbVNWINO6T1NtU1VxC7pMUhFTViDTuk52nVNVBDe6TFIRU1V8g7pOdp1TVTjHuk9TbVNVfIO6T1NtU1UEN7pPU21TVmSMQbJ2nVNWZIxBs1NtU1U4xEGydp1TVXEIQbBSEVNWINBBs1NtU1VxCEGzU21TViDQQbJ2nVNVBDRBsFIRU1V8gEGydp1TVTjEQbNTbVNVfIBBs1NtU1UENEGzU21TVQQ3ukxSEVNVBDe6T1NtU1UENEGwUhFTVQQ0QbNTbVNVcQu6TFIT//0EN7pMUhP//XEIQbBSE//9BDRBsFIT//4g07pPU2/zFXELuk9Tb/7+INBBs1Nv8xVxCEGzU2/+/TjHuk9Tb/MVOMe6TnadU1U4xEGzU2/zFTjEQbJ2nVNWINO6TnadU1Yg0EGydp1TVmSPuk9Tb/MWZIxBs1Nv8xUEN7pPU2/+/XyDuk9Tb+8VBDRBs1Nv/v18gEGzU2/vFXyDuk52nVNVfIBBsnadU1Zkj7pOdp1TVmSMQbJ2nVNVfIO6Tnaf/v5kj7pOdp/+/XyAQbJ2n/7+ZIxBsnaf/v04x7pOdp/+/iDTuk52n/79OMRBsnaf/v4g0EGydp/+/XELuk9TbVNVcQu6TFIRU1VxCEGzU21TVXEIQbBSEVNWdxP9/QmzOFZ3EAcUKcjEonFf/f0JsAACcVwHFCnLHFZ3E/Tr0jYUtncRoHv9/rBmcV/069I3ROJxXaB7/f9IrncT/f7yT5DucV/9/vJPfPp3EAcX0jS1AnFcBxfSNezudxJbh/3+GOJxXluH/fw8rVwhDLBBvnA0QCv06CnJHBFcI/38MaA4IEAr/f0Js6w8aVoHasW01IYRTgdqxbVgKGlb/fxxmIg2EU/9/HGa0Cp3E/ToKcmYDncT/f0JsfxCcV/06CnJUF5xX/39CbAAAncQBxQpy8wGdxP9/QmzGEJ3EluH/f+ECncQBxfSNEh+dxP9/vJMHMp3E/Tr0jYs1ncRoHv9/fTGdxP06CnKXJD9GluH/fyMrEAqW4f9/fis/RgHFCnLvFhAKAcUKckQWP0b9OgpyzBUQCv06CnK5Fj9GaB7/f64qEApoHv9/5CpXSv9/4pkuPsJH/3/imTw+V0qB2k2Ssz7CR4HaTZLLMhAK/3+8k4M+EAoBxfSNTzk/Rv9/vJPvPz9GAcX0jSk6V0r///9/wjPCR////39fINlLAcX0jec/2Uv/f7yT2DcaVoHaTZIAP5xXAcX0jWhAGlb/f+KZez6cV/9/vJM+OIRT/3/imXU+AlL/f7yTOTiEU4HaTZJmMgJSAcX0jfklGlZ9JU2SAzKcV/069I1xJRpWAAD/f4ognFdoHv9/mROcV/9/QmzhHpxXAcUKctAthFMAAP9/xzMCUmge/3/6O4RTfSVNkqs+AlL9OvSNEkAaVv///3+tM5xXluH/f+s7AlIBxQpyTgMCUv9/QmxYFBpWfSWxbQcLnFf9OgpyYAIaVv9/HGZtCpxX/39CbLkTAlL9OvSNpToCUmge/38EK9lL/Tr0jQo62UtoHv9/vyqEU////39IIIRTfSWxbWkhhFP/fxxm1gwCUpbh/38jEwJS/ToKcsotAlL/f0JsUR4CUgHF9I33OAJS/3+8k7E/2UsBxfSNfTnZS/9/vJMxQD9G/3+8k/k3P0YBxfSNkidXSoHasW1gIcJHgdqxba4KV0r/fxxm/wzCR/9/HGabCj9G/Tr0jRU6EAr9OvSN6TkCUv06CnLmFdlL/ToKcmIWV0oAAP9/+h/CRwAA/3+AM1dKfSVNkqMywkd9JU2Slz4/Rv9/QmwAABAK/39CbAAA2Uv9OvSNZCfZS2ge/39sEgJS/39CbAAA2Uv/f0JsAADZS5bh/3/qOxAK/39CbAAAP0b/f0JsAAACUgHFCnKWFgJSluH/f0gr2UsBxQpyIxbZS5bh/38OKz9GAcUKcvECP0b/f0JsMRQ/Rmge/3/DOz9G/Tr0jd0/V0p9JbFtQArCR30lsW0uIT9GluH/f+8S2UsBxQpywS3CR/9/HGYqDT9G/39CbO8eP0b9Ogpy0S3ZS/06CnKEA1dK/38cZsAK2Uv/f0JsgBTZS/9/Qmx6HgJS/39CbAAA2Uv/f0JsAAAOAmr2/3/lI1cIavb/f/UxDgK70+6QMzVXCLvT7pDdPVcIQyzukLczEAr9OvSNDC1XCJQJ/39aIhAKaB7/f3gZEAoBxfSNCEBXCP9/8pe0PRAK/3+8k2U5Vwi70xBvtx4QCgHFCnLBJxAKluH/f4w4Vwj/fwxoWAkQCv9/QmyOFQAAPiL/f7g7DgKUCf9/wC8AALQ9l3KBMA4CQywQb54dDgL/fwxoSgcOArvTEG9kDw4C/38MaN0JDgJDLO6QhDsOAv9/8peAPgAAtD2XcmISAAD/fwlt9AgAAD4i/38ZGQAAtD1njdAZAAD/f/WS/g8AAErCZ41kAAAAwN3/f+wFAABKwpdy3QAAAP9/9ZJCNgAAtD1njV49AADA3f9/ChAAAErCZ41eJQAA/38JbacTAABKwpdyfQMAAP9/CW19I0DOoMd452bCYt+qx6L688Q0zf9/tuujxmLf/3///yzAxdDG5EvdOchi38jkw+1C00LTxsY600HYYt+0xhDhBulG1P9/Gs897WLf/3/g2///QtM4OTrTx/pi30o5EOEj6cXQOBtL3QHiYt82G8PtnNNAzl44eOe1zmLfVDii+o3FNM3/f7brx8Ji3/9////iwOfDiMdWueXDUsL/f2K75s60x8LkbLTVwXjL9MaLr7XMBc3/f4etSN94ywo5i6+19bTHPBtstEXx58N2OFa5ZdtSwv9/Yrtny3vAfcf/fyjHxb7/f/9/tNWXxMHk/38EwKzI/Mb/f1nGW8r/f/9/sdWsyAI5/3906ZfEPRv/f8L+e8CBOP9//ufFvv9//3+01efDiMeoRvPNUsL/f5xEe960x8LkkkuFwnjL9MZzUAfDBc3/f3dSZ814ywo5c1CU3bTHPBuSSxz058N2OKhGgvRSwv9/nESG4EDOoMeGGKraNM3/f0gUBu3F0MbksyJ4ykLTxsbELHDCRtT/f+QwFsVC0zg5xCz10MXQOBuzIhPmQM5eOIYYOP00zf9/SBQG7mLfqsdcBeHrYt//fwAA//9i38jkOxIh12LftMbuHoTGYt//fx4k2MBi30o57h7axmLfNhs7EnLXYt9UOFwFDOxi3/9/AAD//4PwoMeGGLr8kPH/f0gUSO7+7cbksyJ95YHrxsbELHPQfer/f+QwEcWB6zg5xCznwv7tOBuzItfKg/BeOIYYtNqQ8f9/SBS67Nz6iMeoRnv2cfz/f5xE9OEQ98LkkksQ8kvz9MZzUBPcvvH/f3dSU81L8wo5c1AbxBD3PBuSSy/D3Pp2OKhGXM1x/P9/nETZ3En+fcf/fyzw////f/9/adss+sHk/3/Z9xf2/Mb/fwjkafT/f/9/nNUX9gI5/3+WySz6PRv/f97ASf6BOP9/DsP///9//3/Pz9z6iMdWubPYSf59x/9/t99x/P9/YruQyP///3//f8/PEPfC5Gy0HO8s+sHk/38D9Uvz9MaLr9L2F/b8xv9/+O6+8f9/h60832n0/3//f5zVS/MKOYuvZswX9gI5/3+xwxD3PBtstJ/CLPo9G/9/Y8Hc+nY4VrnxxUn+gTj/f1vMcfz/f2K7TdH///9//39p24PwoMd458TNkPH/f7brm8H+7cbkS91f4YHrxsY60376fer/fxrPO+2B6zg5OtNL2P7tOBtL3afIg/BeOHjnScOQ8f9/tuudx1TVqipU1aoqVNWqKlTVqipU1aoqVNWqKlTVqipU1aoqVNWqKlTVqipU1aoqVNWqKqoqVNWqKlTVqipU1aoqVNWqKlTVqipU1aoqVNWqKlTVqipU1aoqVNWqKlTVqipU1VRVqqpUVaqqVFWqqlRVqqr/P/+//z//v/8//7//P/+/AGP+nP9//38AY/6c/3//f/8c/xyqKqoq/xz/HKoqqipUVaqqVFWqqv/i/+L/4v/i//////8c/hz//////xz+HKoqqiqqKqoqVNVU1VTVVNX//////////////////////////////////////////6oqqiqqKqoqqiqqKqoqqipcsIZBwLgfNQFDAcPwyYwzhgPdzToY4ss3HcDj9Cno09Qafhr/////Z8XOBEfj8x18vnQfkdUkK6suEcu9Jv7JQsBESmC9kVK/vxMzK9OhNHC0iD/vQJiz6CZ5yru8SFILMy/IAMQBRH0tMC96Lis8HiuMHwQnTxGJFeEbtwKiNesD+k35Iu5KntU9K9XVrSsqzLM23MraNAQ2Y8w/NOPJqCpP1YcqDdX9EgYT++z57P3R9g568tUp/////97ijRz/////B+MXHW3IUSSj4GEwTkGgBbkf1B/60TMPEkIRBR0TARMCILwf4+z97AHgQuBL8pcplvzZyuANo9b8AjA1PR90z70RjMh3qnE/mq/aMo83pds3TIjlAS4O8W++j/piyC0kv7NCGoNKdKLpRLun2itGyl+2m14lwLZN4LtzWeAcl+JzKubU/Rz64p0qO9WT4Ewwkz+tyxtKtb7b7Rc3HFCHzFhUyb7O4lYc/////+fiqhz/////L+Az4Er7+8pMwBg0pdMqNR+1W0CKQB+z+xzz4gMdD+PUNSDM6DTSyqEf/M+zNxvclw1C1gAuHfEJQwjDM8E0QZIEBjW6Em/JzEDLwEvCS0K+sz0aV0FXwbLCskJ5y7g1tNVqK53KgTSR1SQrK0oLorhEcadOTEDmv75V+vQsgstTQA/Nr+3vNmewojS1S6bAp1W+wHpQV81JtU9d374rTOK6+FdTq7pAq8KrQizALEA+3qgvOcyrJpbusiaj1tsS5hEg2r4E8M62ItLRLhmqzErGagXCDkIP4hh2GrbDGjUauZw0VL96IHK4PUGtryNAhFLf7d40idx+VY7Q+z6Xz7I7HbH50xw4iEtnw1Ipv+4K8dbwWzFCgJI4Y5BdQG55PUr0fm5VxInUVROSaeiyMarnwzv+3SfeE8HV86Pwbzh99w7LokOtoRFIP52iWH3C2/u1NQPl2RqH59fl/////9Hgzjyc1pIpHMpbRJPLYzUPtw1KqcCpQGUzd9agNOfKQzJe5pMp0dajMNn8Ext/5WLlYub/////evAywF/dttqY7a9Wc8cxVTmwn1CZn15MqTnc80fLoPJV2u3bzeHyvMfVGtVd/W6FVcX2YuGqxFWQlmBLuMCM/g7MFOjI1RrVydMWu6jOvtAp16iWr8LCcd+kxlv8i1lKHnEtRxfNoN4p0qPOv8RouAzIJcohvk+jJreJhzqaTGbgecxOKWOGTatUgExVy7HH0ramtbHATL8grLSrJJ1mnf9//38RY4hiR1QTVLFJ9kkiwNu/Aazfstkz6ThpnSiyf4YwscRltZlRSRp4v0JAXG48/Eb3OBY1EzEnI4YrvjLNkM23K3XHtiZbSqRHPaWMXy0mZ9MvvkNcNHAtsC3RHdQjFS72iky68W0xuSlVUqpbOauVqiCLbSMqtkD8MQEnzzZYC1475xBVKAAj/DEBJ03HMA4yxNkIYV+hsktlbLDRT3SvKVVSqic52qwIPMWkpBSgrbkNs5/EDOc/mxMfRaYgESbUIxUuUM/SA0sbcBkBzjca7cznKfJI9rU1Nku8mh8GxM4EGMvyF0ka")
}]

[sub_resource type="Animation" id="Animation_hqeth"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Key:surface_material_override/0:emission_energy_multiplier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lwqfq"]
resource_name = "glow"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Key:surface_material_override/0:emission_energy_multiplier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.52, 0.0, 0.52, 0.0]
}

[sub_resource type="Animation" id="Animation_jkr72"]
resource_name = "no_glow"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Key:surface_material_override/0:emission_energy_multiplier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_86j6d"]
_data = {
"RESET": SubResource("Animation_hqeth"),
"glow": SubResource("Animation_lwqfq"),
"no_glow": SubResource("Animation_jkr72")
}

[node name="KeyHang" type="Node3D"]
script = ExtResource("1_ulduj")

[node name="TopBody" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.18421, 0)
collision_layer = 128
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
gravity_scale = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="TopBody"]
shape = SubResource("CapsuleShape3D_hdfu2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TopBody"]
transform = Transform3D(0.0678102, 0, 0, 0, 0.0678102, 0, 0, 0, 0.0678102, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_pa4bi")

[node name="chainLink" parent="TopBody" instance=ExtResource("2_hj4tm")]
transform = Transform3D(0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0)

[node name="PinJoint3D2" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.07824, 0)
node_a = NodePath("../TopBody")
node_b = NodePath("../Body1")

[node name="Body1" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.01891, 0)
collision_layer = 128
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
gravity_scale = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body1"]
shape = SubResource("CapsuleShape3D_hdfu2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body1"]
transform = Transform3D(0.0678102, 0, 0, 0, 0.0678102, 0, 0, 0, 0.0678102, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_pa4bi")

[node name="chainLink2" parent="Body1" instance=ExtResource("2_hj4tm")]
transform = Transform3D(0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0, 0.0605655, 0, -0.0286136, 0)

[node name="PinJoint3D3" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.86757, 0)
node_a = NodePath("../Body1")
node_b = NodePath("../Body2")

[node name="Body2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.86547, 0)
collision_layer = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body2"]
shape = SubResource("CapsuleShape3D_hdfu2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body2"]
transform = Transform3D(0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_pa4bi")

[node name="chainLink3" parent="Body2" instance=ExtResource("2_hj4tm")]
transform = Transform3D(0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0, 0.0605655, 0, -0.0554248, 0)

[node name="PinJoint3D4" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73254, 0)
node_a = NodePath("../Body2")
node_b = NodePath("../Body3")

[node name="Body3" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00198432, 1.72109, 0)
collision_layer = 128
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body3"]
shape = SubResource("CapsuleShape3D_hdfu2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body3"]
transform = Transform3D(0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_pa4bi")

[node name="chainLink4" parent="Body3" instance=ExtResource("2_hj4tm")]
transform = Transform3D(0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0, 0.0605655, 0, -0.103115, 0)

[node name="PinJoint3D5" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53831, 0)
node_a = NodePath("../Body3")
node_b = NodePath("../Body4")

[node name="Body4" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000715666, 1.58948, 0)
collision_layer = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body4"]
shape = SubResource("CapsuleShape3D_hdfu2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body4"]
transform = Transform3D(0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_pa4bi")

[node name="chainLink5" parent="Body4" instance=ExtResource("2_hj4tm")]
transform = Transform3D(0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0, 0.0605655, 0, -0.155162, 0)

[node name="PinJoint3D6" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33221, 0)
node_a = NodePath("../Body4")
node_b = NodePath("../Body5")

[node name="Body5" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00302912, 1.23597, 0)
collision_layer = 128
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_y = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body5"]
shape = SubResource("CapsuleShape3D_hdfu2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body5"]
transform = Transform3D(0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_pa4bi")

[node name="chainLink6" parent="Body5" instance=ExtResource("2_hj4tm")]
transform = Transform3D(0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0)

[node name="PinJoint3D7" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13799, 0)
node_a = NodePath("../Body5")
node_b = NodePath("../Body6")

[node name="Body6" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00676547, 1.03952, 0)
collision_layer = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body6"]
shape = SubResource("CapsuleShape3D_hdfu2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body6"]
transform = Transform3D(0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0, 0.0669139, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_pa4bi")

[node name="chainLink7" parent="Body6" instance=ExtResource("2_hj4tm")]
transform = Transform3D(0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0, 0.0605655, 0, 0, 0)

[node name="KeyPin" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.919764, 0)
node_a = NodePath("../Body6")
node_b = NodePath("../KeyPart")

[node name="KeyPart" type="RigidBody3D" parent="." groups=["push_key"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.782853, 0)
collision_layer = 130
collision_mask = 128
script = ExtResource("3_gmltj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="KeyPart"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0188423, 0)
shape = SubResource("CylinderShape3D_mdynn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="KeyPart"]
transform = Transform3D(0.00340901, -0.131967, 0, 0.253649, 0.00177362, 0, 0, 0, 0.034284, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_75j3m")

[node name="Key" type="MeshInstance3D" parent="KeyPart"]
transform = Transform3D(0.000931363, 0.0308665, -0.00271932, 0.0309379, -0.00107774, -0.00163712, -0.00172458, -0.0026647, -0.0308371, 0, 0.034221, 0.00712147)
mesh = SubResource("ArrayMesh_1nkyk")
surface_material_override/0 = ExtResource("4_gielh")

[node name="KeyGlow" type="AnimationPlayer" parent="KeyPart"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_86j6d")
}
